@@ -1,0 +1,9 @@
+Title: Improved error handling when trying to edit not existing global setting
+Level: 1
+Component: wato
+Compatible: compat
+Version: 1.4.0i2
+Date: 1478508930
+Class: fix
+
+
