@@ -73,6 +73,7 @@
     * 3951 FIX: oracle_sessions: fixed bug with default absolute levels...
     * 4039 FIX: Fix UnicodeEncodeError exception in WATO folder display...
     * 4041 FIX: Fix exception when editing global configuration settings...
+    * 3975 FIX: Improved error handling when trying to edit not existing global setting
 
     Notifications:
     * 3957 mail: now allows extra HTML section between body and table
